--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-addons-transition-group": "^15.6.0",
     "react-chartjs-2": "2.5.6",
     "react-dom": "^15.6.1",
+    "react-loader": "^2.4.5",
     "react-router-dom": "4.1.2",
     "reactstrap": "^4.8.0",
     "simple-line-icons": "^2.4.1"
